<resources>
    <string name="app_name">Drink</string>

    <string name="fb_app_id">394310730904722</string>
    <string name="account_kit_client_token">4ec56df0660384fa61c5a90ecf164eaf</string>
    <string name="ak_login_protocol_scheme">ak4ec56df0660384fa61c5a90ecf164eaf</string>

    <string name="txt_open_app">Get the best coffee\n in town!</string>
    <string name="txt_register">register</string>
    <string name="txt_login">login</string>
    <string name="txt_connect_with_facebook">Connect with Facebook</string>
    <string name="txt_name">Name</string>
    <string name="txt_address">Address</string>
    <string name="txt_birthday">dd-mm-yyyy</string>
    <string name="txt_continue">continue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="txt_our_popular_products">OUR POPULAR PRODUCTS</string>
    <string name="txt_price">Price</string>
    <string name="txt_add_to_cart">add to cart</string>
</resources>
