<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="16dp"
        app:cardCornerRadius="8dp">

    <LinearLayout
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_name"
                android:textSize="18sp"
                android:inputType="text"
                app:met_floatingLabel="highlight"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_address"
                android:textSize="18sp"
                android:inputType="text"
                app:met_floatingLabel="highlight"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_birthday"
                android:textSize="18sp"
                android:digits="1234567890-"
                app:met_floatingLabel="highlight"/>

        <Button
                android:id="@+id/btnRegister"
                android:textColor="@android:color/white"
                android:background="@drawable/shape_button_dark"
                android:layout_gravity="center"
                android:text="@string/txt_continue"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</android.support.v7.widget.CardView>