<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        tools:context=".MainActivity">

    <ImageView
            android:layout_weight="85"
            android:id="@+id/imageArtWork"
            android:src="@drawable/artwork"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    <TextView
            android:layout_weight="5"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:id="@+id/tvOpenApp"
            android:text="@string/txt_open_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_weight="10"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shape_button_dark"
                    android:textColor="@android:color/white"
                    android:layout_weight="1"
                    android:id="@+id/btnRegister"
                    android:text="@string/txt_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <Button
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/shape_button_light"
                    android:layout_weight="1"
                    android:id="@+id/btnLogin"
                    android:text="@string/txt_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/btnConnectFacebook"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:background="@drawable/shape_button_blue_light"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/icon_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textSize="18sp"
                    android:textColor="@color/color_blue_border"
                    android:text="@string/txt_connect_with_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>